# purely-functional-data-structures

./: README.md  flake.nix  purely-functional-data-structures.cabal
.github/workflows/: ci.yml
archive/ch3/: README.md
archive/ch3/src/: LeftistHeap.hs
archive/ch3/test/: Spec.hs
ch3/: ch3.cabal  stack.yaml
ch3/src/: BinomialTree.hs
src/Data/Okasaki/: BinaryTree.hs
test/Test/Data/Okasaki/: BinaryTreeSpec.hs
